--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,13 +4,25 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
-
     <display-name>TIW_2021project</display-name>
 
     <welcome-file-list>
         <welcome-file>login.html</welcome-file>
     </welcome-file-list>
 
+
+    <context-param>
+        <param-name>dbUrl</param-name>
+        <param-value>jdbc:mysql://aws-db1.cq19dtt44nal.eu-south-1.rds.amazonaws.com:3306/tiw_2021project</param-value>
+    </context-param>
+    <context-param>
+        <param-name>dbUser</param-name>
+        <param-value>intellij</param-value>
+    </context-param>
+    <context-param>
+        <param-name>dbPassword</param-name>
+        <param-value>intellij1234</param-value>
+    </context-param>
 
 
     <filter>
@@ -20,8 +32,9 @@
 
     <filter-mapping>
         <filter-name>SessionChecker</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
+        <url-pattern>/home.html</url-pattern>
+        <url-pattern>/</url-pattern>
+        <url-pattern>/home</url-pattern>
     </filter-mapping>
 
     <!--
