--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,9 @@
     <filter-mapping>
         <filter-name>SessionChecker</filter-name>
         <url-pattern>/home</url-pattern>
+        <url-pattern>/cart</url-pattern>
+        <url-pattern>/orders</url-pattern>
+        <url-pattern>/searchProducts</url-pattern>
     </filter-mapping>
 
     <!--
