AddToCart function implemented && new Cart template

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,7 @@
         <url-pattern>/cart</url-pattern>
         <url-pattern>/orders</url-pattern>
         <url-pattern>/searchProducts</url-pattern>
+        <url-pattern>/AddToCart</url-pattern>
     </filter-mapping>
 
     <!--
