--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,7 @@
 
     <filter-mapping>
         <filter-name>SessionChecker</filter-name>
+        <url-pattern>/</url-pattern>
         <url-pattern>/home</url-pattern>
         <url-pattern>/cart</url-pattern>
         <url-pattern>/orders</url-pattern>
