--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 
     <context-param>
         <param-name>dbUrl</param-name>
-        <param-value>jdbc:mysql://aws-db1.cq19dtt44nal.eu-south-1.rds.amazonaws.com:3306/tiw_2021project</param-value>
+        <param-value>jdbc:mysql://aws-db1.cq19dtt44nal.eu-south-1.rds.amazonaws.com:3306/tiw_2021project?useSSL=false</param-value>
     </context-param>
     <context-param>
         <param-name>dbUser</param-name>
@@ -38,6 +38,7 @@
         <url-pattern>/orders</url-pattern>
         <url-pattern>/searchProducts</url-pattern>
         <url-pattern>/AddToCart</url-pattern>
+        <url-pattern>/showProductInfo</url-pattern>
     </filter-mapping>
 
     <!--
