--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,9 +36,9 @@
         <url-pattern>/home</url-pattern>
         <url-pattern>/cart</url-pattern>
         <url-pattern>/orders</url-pattern>
-        <url-pattern>/searchProducts</url-pattern>
+        <url-pattern>/search/*</url-pattern>
         <url-pattern>/AddToCart</url-pattern>
-        <url-pattern>/showProductInfo</url-pattern>
+        <url-pattern>/shoppingCart</url-pattern>
     </filter-mapping>
 
     <!--
