--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,26 +33,26 @@
         <filter-name>SessionChecker</filter-name>
         <filter-class>com.ss.TIW_2021project.web.filter.SessionChecker</filter-class>
     </filter>
+    <filter>
+        <filter-name>CheckNotLoggedUser</filter-name>
+        <filter-class>com.ss.TIW_2021project.web.filter.CheckNotLoggedUser</filter-class>
+    </filter>
 
     <filter-mapping>
-        <filter-name>SessionChecker</filter-name>
+        <filter-name>CheckNotLoggedUser</filter-name>
         <url-pattern>/</url-pattern>
-        <url-pattern>/home</url-pattern>
-        <url-pattern>/cart</url-pattern>
-        <url-pattern>/orders</url-pattern>
+        <url-pattern>/GoToLogin</url-pattern>
+        <url-pattern>/login</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>SessionChecker</filter-name>
+        <url-pattern>/GoToHome</url-pattern>
+        <url-pattern>/GoToShoppingCart</url-pattern>
+        <url-pattern>/GoToOrders</url-pattern>
         <url-pattern>/search/*</url-pattern>
         <url-pattern>/AddToCart</url-pattern>
-        <url-pattern>/shoppingCart</url-pattern>
+        <url-pattern>/PlaceOrder</url-pattern>
+        <url-pattern>/logout</url-pattern>
     </filter-mapping>
-
-    <!--
-    Dato che senza aver fatto il login l'utente non può fare nulla si è deciso di applicare il filtro
-    per ogni richiesta proveniente dal web browser
-    -->
-
-    <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-    </welcome-file-list>
-
 
 </web-app>
