--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,6 +43,7 @@
         <url-pattern>/</url-pattern>
         <url-pattern>/GoToLogin</url-pattern>
         <url-pattern>/login</url-pattern>
+        <url-pattern>/signup</url-pattern>
     </filter-mapping>
     <filter-mapping>
         <filter-name>SessionChecker</filter-name>
